Maths - Real No. All questions

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -3,8 +3,7 @@
   "cssTheme": "AnuPpuccin",
   "enabledCssSnippets": [
     "animations",
-    "formatting",
-    "UI"
+    "formatting"
   ],
   "showViewHeader": false,
   "baseFontSize": 18,
